--- a/src/css/AboutArea.css
+++ b/src/css/AboutArea.css
@@ -1,6 +1,6 @@
 .overall {
     width: 100%;
-    background: azure;
+    background: linear-gradient(azure,white);
     padding: 50px 0;
     display: flex;
     flex-direction: column;
