--- a/src/css/AboutPlot.css
+++ b/src/css/AboutPlot.css
@@ -41,9 +41,12 @@
 
 
  */
+  #AboutPlot{
+    background-color: linear-gradient(white,rgb(160, 237, 218));
 
+  }
  .main-plot {
-    background-color: white;
+    background-color:white;
     width: 100%;
     height: auto;
     display: flex;
