--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -13,7 +13,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../assets/plot.jpg');
+    background: url('../assets/background.jpg');
     background-size: cover;
     background-position: center;
     z-index: 1;
