--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -346,7 +346,7 @@ nav ul li{
 /* Tablets and small laptops */
 @media screen and (max-width: 992px) {
     .navbar {
-        padding: 0.8rem 3%;
+        /* padding: 0.8rem 3%; */
     }
     
     .scroll-down {
@@ -366,13 +366,12 @@ nav ul li{
     .scroll-down .navbar-menu li a::after {
         background: linear-gradient(90deg, #333, rgba(51, 51, 51, 0.5));
     }
-    .navbar-logo {
-        width: 150px;
-    }
+    
 }
 
 /* Tablets and large phones */
 @media screen and (max-width: 768px) {
+    
     .mobile-menu-toggle {
         display: flex;
     }
@@ -504,8 +503,8 @@ nav ul li{
         background: linear-gradient(90deg, #333, rgba(51, 51, 51, 0.5));
     }
     .navbar-logo {
-        width: 120px;
-        max-height: 60px;
+        width: auto;
+        max-height: auto;
     }
     
     .navbar-menu {
@@ -521,8 +520,8 @@ nav ul li{
 /* Extra small devices */
 @media screen and (max-width: 320px) {
     .navbar-logo {
-        width: 100px;
-        max-height: 50px;
+        width: auto;
+        max-height: auto;
     }
     .scroll-down {
         background-color: rgba(255, 255, 255, 0.95);
