--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -52,6 +52,33 @@
     z-index: 2;
     animation: fadeInLeft 1s ease-out;
 }
+h3{
+    color:#1c2229;
+}
+.termscheckbox {
+    color:black;
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+.termscheckbox{
+    width: 16px;
+    height: 14px;
+}
+.termscheckbox{
+    font-size: 14px;
+    cursor: pointer;
+}
+.termscheckbox a {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.termscheckbox a:hover {
+    text-decoration: underline;
+}
 
 .plot-details h2 {
     margin: 0 0 25px;
@@ -105,11 +132,10 @@
 
 .user-details {
     margin: auto;
-    max-width: 25%;
+    max-width: 29%;
     flex-basis: 40%;
     border-radius: 20px;
     backdrop-filter: blur(20px);
-    /* background-color: rgba(255, 255, 255, 0.95); */
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.08);
     border: 1px solid rgba(255, 255, 255, 0.3);
     padding: 45px 35px;
@@ -150,15 +176,14 @@
 }
 
 .input input {
-    padding: 18px 22px;
+    padding: 15px 22px;
     border-radius: 50px;
     width: calc(100% - 30px);
     outline: none;
-    margin: 0 15px;
+    margin: 0 ;
     border: 1px solid rgba(0, 0, 0, 0.05);
-    /* background-color: rgba(255, 255, 255, 0.95); */
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.03);
-    font-size: 1.05rem;
+    font-size: 1rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -169,7 +194,7 @@
 }
 
 .input button {
-    padding: 18px 22px;
+    padding: 15px 22px;
     margin: 10px 15px 0;
     border-radius: 50px;
     outline: none;
