--- a/src/css/Pricing.css
+++ b/src/css/Pricing.css
@@ -1,65 +1,5 @@
-/* .overall-pricing{
-    background-color:rgb(255, 247, 237);
-}
-.abt-price{
-    text-align:center;
-    padding:20px;
-    font-size: 35px;
-}
-.pricing-table{
-    padding-bottom:20px;
-}
-table{
-    margin-top:3%;
-    border-collapse: collapse;
-    margin-left:15%;
-    text-align: center;
-    width:70%;
-    border:1px solid black;
-    margin-bottom:20px;
-}
- th, td{
-    border:1px solid black;
-    padding:5px;
-}
-table th td{
-    border:1px solid black;
-}
-th{
-    padding-bottom:20px;
-    font-size:25px;
-    background-color: rgb(191, 234, 234);
-}
-td{
-    padding-left:20px;
-}
-td button{
-    margin-right:20px;
-}
-.rupees{
-    display:flex;
-}
-td p{
-    text-align: center;
-    margin-left:40px;
-}
-td button{
-    padding-top:10px;
-    margin-top:5px;
-    margin-bottom:5px;
-    padding-bottom:10px;
-    padding-left:10px;
-    padding-right:10px;
-    border-radius:20px;
-    cursor:pointer;
-}
-td button:hover{
-    background-color: rgb(186, 182, 182);;
-} */
-
-
 .overall-pricing {
-    background: linear-gradient(135deg, #fff7ed 0%, #fff1e6 100%);
+    background: linear-gradient(white, #fff7ed , #fff1e6,white);
     padding: 50px 0;
     font-family: 'Arial', sans-serif;
 }
