--- a/src/css/Popup.css
+++ b/src/css/Popup.css
@@ -1,4 +1,5 @@
 .popup-overlay {
+    backdrop-filter: blur(20px);
     position: fixed;
     top: 0;
     left: 0;
@@ -14,7 +15,7 @@
 .popup-form {
     background: white;
     padding: 20px;
-    width: 350px;
+    width: 400px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -25,9 +26,12 @@
     position: absolute;
     top: 10px;
     right: 15px;
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     color: red;
+}
+.close-btn :hover{
+    cursor:pointer;
 }
 
 .popup-form input, .popup-form textarea {
@@ -47,6 +51,8 @@
 .checkbox input {
     width: 16px;
     height: 16px;
+    margin-top: 5px;
+    margin-right:5px;
     cursor: pointer;
 }
 
@@ -73,6 +79,7 @@
     color: white;
     border: none;
     padding: 10px;
+    padding-right: 10px;
     width: 100%;
     cursor: pointer;
     border-radius: 5px;
